<resources>
    <string name="app_name" translatable="false">CacheIt</string>
    <!-- Strings used for fragments for navigation -->

    <string name="welcome_greeting">Welcome</string>
    <string name="welcome_get_started">Let\'s Get Started</string>
    <string name="welcome_account_exists">Already have an account?</string>
    <string name="registration_title">Create your account</string>
    <string name="registration_subtitle">Fill out the form and begin noting just for yourself</string>
    <string name="registration_email">Email</string>
    <string name="registration_username">Username</string>
    <string name="registration_accountholder">Full Name</string>
    <string name="registration_password">Password</string>
    <string name="registration_password_note">Note: Make your password secure, use a mix of upper and lowercase letters, numbers and symbols. Add it to a password manager, if you use one</string>
    <string name="login_title">Log into your account</string>
    <string name="login_subtitle">Get back to your notes</string>
    <string name="login_identifier">Email or Username</string>
    <string name="login_password">Password</string>
    <string name="registration_request">Let\'s get started</string>
    <string name="login_request">Log in</string>
    <string name="registration_account_exists">Already have an account? Press here</string>
    <string name="login_no_account">Don\'t have an account yet? Press here</string>
    <string name="registration_password_confirm">Confirm Password</string>
    <string name="note_view_history">View note history</string>
    <string name="note_info_drawing_true">Note contains a drawing</string>
    <string name="note_drawing_locked">Locked for drawing on another device</string>
    <string name="note_edit_title">Edit note</string>
    <string name="navigation_back">Back</string>
    <string name="note_edit_note_not_found_offline">This note couldn\'t be found.</string>
    <string name="note_edit_note_title">Title</string>
    <string name="saving_in_progress">Saving…</string>
    <string name="save">Save</string>
    <string name="note_list_title">Notes</string>
    <string name="note_list_empty_notice">No notes added yet.</string>
    <string name="note_decrypt_failure">Failed to decrypt %1$d notes</string>
    <string name="error_screen_title">Error</string>
    <string name="error_screen_body">An unknown error has occurred</string>
    <string name="ok">OK</string>
    <string name="note_versions_none_found">No earlier versions yet.</string>
    <string name="note_version_current">Current version</string>
    <string name="note_version_has_drawing">Contains a drawing</string>
    <string name="note_version_restore_this">Restore this version</string>
    <string name="note_version_restore_in_progress">Restoring…</string>
    <string name="cancel">Cancel</string>
    <string name="note_version_restore_unconfirmed">Couldn\'t confirm the restore - check shortly</string>
    <string name="snackbar_error">Error: %1$s.userMessage</string>
    <string name="snackbar_error_general">Something went wrong. Try again.</string>
    <string name="snackbar_error_missing_credentials">Enter your email/username and password</string>
    <string name="snackbar_error_blank_fields">Fill out every field to continue</string>
    <string name="snackbar_error_password_mismatch">Passwords don\'t match</string>
    <string name="snackbar_drawing_lock_expired">Drawing lock expired</string>
    <string name="snackbar_alert_drawing_lock_time">Drawing lock expires in %1$dm - save to keep editing</string>
    <string name="snackbar_alert_accountId_unavailable">Failed to get account ID. If this happens again, refresh your session.</string>
    <string name="account_password_change">Password change</string>
    <string name="account_device_sessions">Device sessions</string>
    <string name="account_log_out">Log out</string>
    <string name="account_title">Account</string>
    <string name="account_loading_error">Couldn\'t load the account data. Try again later</string>
    <string name="data_fetch_failed">Failed to load account data.</string>
    <string name="note_card_delete_note">Delete note</string>
    <string name="note_list_refresh_error">Refreshing failed, try again later</string>
    <string name="note_list_delete_error">Failed to delete the note</string>
    <string name="password_change_fill_all_fields_notice">Fill out every field to continue</string>
    <string name="password_change_new_password_mismatch">New passwords don\'t match</string>
    <string name="clearout_deletion_notice">Tap to clear this device\'s local data and sign out. Hold for 10 seconds to permanently delete your account.</string>
    <string name="clearout_title">Clear out</string>
    <string name="clearout_deletion_unavailable">Account deletion isn\'t available yet</string>
    <string name="password_change_unavailable">Password change isn\'t wired up yet</string>
    <string name="change_password">Change password</string>
    <string name="password_change_confirm_password">Confirm new password</string>
    <string name="password_change_new_password">New password</string>
    <string name="password_change_current_password">Current password</string>
    <string name="timestamp_yesterday">Yesterday %1$s</string>
    <string name="note_list_cta_notice">Add your first note</string>
    <string name="note_edit_cant_load_note">Couldn\'t access note - try again later.</string>
    <string name="note_edit_note_not_found">Couldn\'t load note - try again later.</string>
    <string name="retry">Retry</string>
    <string name="account_toggle_theme">Toggle theme</string>
    <string name="account_use_system_theme">Use System theme</string>

</resources>