...
                    NoteEditMode.TextEdit -> {
                        OutlinedTextField(
                            value = ready.note.title,
                            onValueChange = viewModel::onTitleChanged,
                            enabled = !ready.isSaving,
                            singleLine = true,
                            modifier = Modifier.testTag("note_edit_title_field"),
                            label = {
                                Text(
                                    stringResource(
                                        R.string.note_edit_note_title,
                                    ),
                                )
...
                                    viewModel.exitCreate()
                                } else {
                                    viewModel.exitTextEdit()
                                }
                            },
                            enabled = !ready.isSaving,
                            modifier = Modifier.testTag("note_edit_save_button"),
                        ) {
                            Icon(
                                Icons.Default.Save,
                                contentDescription =
                                    stringResource(R.string.save),
                            )
...
